--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
 <!-- your webpage info goes here -->
     <title>Curso GIT DIEGO</title>
 	
-	<meta name="author" content="your name" />
-	<meta name="description" content="" />
+	<meta name="author" content="Diego González" />
+	<meta name="description" content="HTML de prueba para el curso de GIT" />
 
 <!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->	
 	<link rel="stylesheet" href="styles.css" type="text/css" />
